--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint --fix --ext .jsx ./src"
+    "lint": "eslint --fix --ext .jsx ./src",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
@@ -20,6 +22,7 @@
     "antd": "^4.12.2",
     "axios": "^0.21.0",
     "env-cmd": "^10.1.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
