--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ REACT_APP_IS_ENABLE_CORS_ANYWHERE=true
 REACT_APP_CORS_ANYWHERE_API_URL=https://cors-anywhere.herokuapp.com/
 
 # resources base url
-REACT_APP_BASE_API_URL = https://slashview.com/_data/
+REACT_APP_BASE_API_URL = http://slashview.com/_data/
