fix fetch data failed

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-######################################################################################################
+# #####################################################################################################
 # With create-react-app, you need to prefix REACT_APP_ to the variable name to be able to access it. #
-######################################################################################################
+# #####################################################################################################
 
 # 開啟跨域服務 [cors-anywhere](https://github.com/Rob--W/cors-anywhere/)
 REACT_APP_IS_ENABLE_CORS_ANYWHERE=true
 
-# cors-anywhere url 
-REACT_APP_CORS_ANYWHERE_API_URL=https://cors-anywhere.herokuapp.com/
+# cors-anywhere url
+REACT_APP_CORS_ANYWHERE_API_URL=http://cors-anywhere.herokuapp.com/
 
 # resources base url
-REACT_APP_BASE_API_URL = http://slashview.com/_data/
+REACT_APP_BASE_API_URL=http://slashview.com/_data/
