--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "test": "react-scripts test",
     "lint": "eslint --fix --ext .jsx ./src",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "preanalyze": "npm run build",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
     "antd": "^4.12.2",
     "axios": "^0.21.0",
     "env-cmd": "^10.1.0",
@@ -28,23 +28,16 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-ga": "^3.3.0",
     "react-scripts": "4.0.1"
   },
   "devDependencies": {
-    "eslint": "^7.16.0",
-    "eslint-plugin-react": "^7.22.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.2",
+    "prettier": "2.2.1",
+    "source-map-explorer": "^2.5.2"
   }
 }
