--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,13 +1,8 @@
 {
   "recommendations": [
-    "formulahendry.auto-rename-tag",
-    "coenraads.bracket-pair-colorizer-2",
-    "msjsdiag.debugger-for-chrome",
-    "editorconfig.editorconfig",
-    "irongeek.vscode-env",
-    "dbaeumer.vscode-eslint",
-    "eamodio.gitlens",
-    "oderwat.indent-rainbow",
-    "esbenp.prettier-vscode"
+    "lokalise.i18n-ally",
+    "bradlc.vscode-tailwindcss",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint"
   ]
 }
