--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
   "name": "tw-invoice",
-  "version": "0.1.0",
-  "description": "Easily Check Taiwan Invoice Lottery Tool.",
-  "author": "kr1swang",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/kr1swang/tw-invoice"
-  },
+  "version": "2.0.0",
+  "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "lint": "eslint --fix --ext .jsx ./src",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
-    "preanalyze": "npm run build",
-    "analyze": "source-map-explorer 'build/static/js/*.js'"
+    "dev": "env-cmd next dev",
+    "build": "rm -rf .next out && env-cmd next build",
+    "start": "yarn run build && npx serve out"
   },
   "dependencies": {
-    "antd": "^4.12.2",
-    "axios": "^0.21.0",
-    "env-cmd": "^10.1.0",
-    "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1",
-    "normalize.css": "^8.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "@radix-ui/react-toast": "^1.1.5",
+    "axios": "^1.6.6",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
+    "i18next": "^23.7.19",
+    "i18next-resources-to-backend": "^1.2.0",
+    "lucide-react": "^0.315.0",
+    "next": "14.1.0",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-i18next": "^14.0.1",
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.2",
-    "prettier": "2.2.1",
-    "source-map-explorer": "^2.5.2"
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.0",
+    "@types/node": "20.4.5",
+    "@types/react": "18.2.18",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.14",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
+    "eslint-config-prettier": "^8.9.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   }
 }
