--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "env-cmd next dev",
-    "build": "rm -rf .next out && env-cmd next build",
-    "start": "yarn run build && npx serve out"
+    "build": "env-cmd next build",
+    "start": "yarn run build && npx serve out",
+    "deploy": "yarn run build && gh-pages -d out"
   },
   "dependencies": {
     "@radix-ui/react-select": "^2.0.0",
@@ -40,6 +41,7 @@
     "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
